--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
-  "name": "hexo-site",
-  "version": "0.0.0",
-  "private": true,
-  "hexo": {
-    "version": "3.7.1"
-  },
+  "name": "fe-blog",
+  "version": "1.0.0",
   "dependencies": {
     "hexo": "^3.7.1",
     "hexo-deployer-git": "^0.3.1",
