--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "fe-blog",
   "version": "1.0.0",
+  "hexo": {
+    "version": "3.7.1"
+  },
   "dependencies": {
     "hexo": "^3.7.1",
     "hexo-deployer-git": "^0.3.1",
